# framework-shells

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
framework_shells/: __init__.py  auth.py  events.py  hooks.py  manager.py  orchestrator.py  process_snapshot.py  pty.py  record.py  shellspec.py  shutdown.py  store.py  ui_hints.py
framework_shells/api/: fastapi_router.py  fws_ui.py  websocket.py
framework_shells/cli/: main.py
framework_shells/ui/: fws.css  fws.js  index.html  logs.html
